<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:minHeight="50dp"
        android:fontFamily="sans-serif-light"
        android:textSize="18sp"
        android:gravity="fill_horizontal"
        android:inputType="textMultiLine"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:minHeight="48dp"
        android:fontFamily="sans-serif-light"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        android:gravity="fill_horizontal"

        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/update"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/black"
        android:background="@drawable/signup"
     />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:background="@drawable/signup"/>
</LinearLayout>


</LinearLayout>